--- a/app/main.css
+++ b/app/main.css
@@ -7,3 +7,15 @@ body {
 .todo-submit-button {
     width: 100%;
 }
+
+.sign-in-form, .sign-up-form {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.error-message {
+    color: red;
+    margin-left: auto;
+    margin-right: auto
+}
